alle infoseiten vollstaendig, von statischen seiten nur noch help zu bearbeiten

--- a/app/views/home/agentinfo.html.erb
+++ b/app/views/home/agentinfo.html.erb
@@ -17,7 +17,57 @@
 				<div class="well">          
 				  <div class="panel panel-info">
 				    <div class="panel-body">	
-				    	<p>Info hier</p>
+				    	<p>
+									<div class="table-responsive table-scrollable">
+									 <table class="table table-striped table-bordered table-hover ">
+									<tr class="tableizer-firstrow"><th>Domain/ Superkingdom</th><th>Kingdom</th><th>Phylum</th><th>Class</th><th>Order</th><th>Family</th><th>Genus</th><th>Species</th><th>Subspecies</th><th>&nbsp;</th><th>&nbsp;</th></tr>
+									 <tr><td>Bacteria</td><td>Eubacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Staphylococcaceae</td><td>Staphylococcus</td><td>aureus</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>bongori</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>enterica</td><td>enterica</td><td>Serotypes have to be mentioned</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>enterica</td><td>salamae</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>enterica</td><td>arizonae/diarizonae</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>enterica</td><td>houtenae</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Salmonella</td><td>enterica</td><td>indica</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Vibrionales</td><td>Vibrionaceae</td><td>Vibrio</td><td>cholerae</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Vibrionales</td><td>Vibrionaceae</td><td>Vibrio</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>amyloliquefaciens</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>anthracis</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>brevis</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>cereus</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>globigii</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>licheniformis</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>subtilis</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>thuringiensis</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Bacillaceae</td><td>Bacillus</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Escherichia</td><td>coli</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Escherichia</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Listeriaceae</td><td>Listeria</td><td>monocytogenes</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Bacilli</td><td>Bacillales</td><td>Listeriaceae</td><td>Listeria</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Yersinia</td><td>enterocolitica</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Yersinia</td><td>pestis</td><td>&nbsp;</td><td>may not relevant for food</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Yersinia</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Shigella</td><td>dysenteriae</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Shigella</td><td>flexneri</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Shigella</td><td>sonnei</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Gammaproteobacteria</td><td>Enterobacteriales</td><td>Enterobacteriaceae</td><td>Shigella</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Epsilonproteobacteria</td><td>Campylobacterales</td><td>Campylobacteradeae</td><td>Campylobavter</td><td>jejuni</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Proteobacteria</td><td>Epsilonproteobacteria</td><td>Campylobacterales</td><td>Campylobacteradeae</td><td>Campylobavter</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Clostridia</td><td>Clostridiales</td><td>Clostridiaceae</td><td>Clostridium</td><td>botulinum</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Clostridia</td><td>Clostridiales</td><td>Clostridiaceae</td><td>Clostridium</td><td>difficile</td><td>&nbsp;</td><td>may not relevant for food</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Clostridia</td><td>Clostridiales</td><td>Clostridiaceae</td><td>Clostridium</td><td>perfringens</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Bacteria</td><td>Bacteria</td><td>Firmicutes</td><td>Clostridia</td><td>Clostridiales</td><td>Clostridiaceae</td><td>Clostridium</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Eukaryota</td><td>Fungi</td><td>Ascomycota - Saccharomycotina</td><td>Eurotiomycetes</td><td>Eurotiales</td><td>Trichocomaceae</td><td>Aspergillus</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Eukaryota</td><td>Fungi</td><td>Ascomycota - Saccharomycotina</td><td>Eurotiomycetes</td><td>Eurotiales</td><td>Trichocomaceae</td><td>Aspergillus</td><td>niger</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Eukaryota</td><td>Fungi</td><td>Ascomycota - Saccharomycotina</td><td>Sordariomycetes</td><td>Hypocreales</td><td>Nectriaceae</td><td>Fusarium</td><td>spp.</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+									 <tr><td>Eukaryota</td><td>Fungi</td><td>Ascomycota - Saccharomycotina</td><td>Saccharomycetes</td><td>Saccharomycetales</td><td>Saccharomycetaceae</td><td>Saccharomyces</td><td>cervisiae</td><td>&nbsp;</td><td>non pathogenic</td><td>&nbsp;</td></tr>
+									 <tr><td>Eukaryota</td><td>Fungi</td><td>Ascomycota - Saccharomycotina</td><td>Saccharomycetes</td><td>Saccharomycetales</td><td>Saccharomycetaceae</td><td>Candida</td><td>albicans</td><td>&nbsp;</td><td>non pathogenic</td><td></td></tr>
+									</table>
+									</div>
+
+				    	</p>
 				    </div>
 				  </div>
 				</div>		
