--- a/app/views/home/matrixinfo.html.erb
+++ b/app/views/home/matrixinfo.html.erb
@@ -17,7 +17,100 @@
 				<div class="well">          
 				  <div class="panel panel-info">
 				    <div class="panel-body">	
-				    	<p>Info hier</p>
+				    	<p><strong>Introduction</strong> <br>
+				    		The ESA List of Culinary Herbs and Spices is not comprehensive but covers the most frequently used herbs and spices with the most commonly used botanical names in Europe.
+							</p>
+							<div><strong>Notes</strong>
+								<p>"1 a) The traditional names and definitions developed over time sometimes deviate from the botanical definitions, for example aniseed and other seeds which are botanically fruits and white pepper which is sometimes defined as fruit while the botanical definition is seed."</p>
+								<p>1 b) For Culinary Herbs part of plant is normally leaves or whole, soft part of the plant.</p>
+								<p>"2) Spices are classified in various ways of which the most used are as per part of the plant or as per indigenous climate zone. (TR = tropical zone, TE=temperate zone, SU = subtropical)"</p>
+								<p>3) Pepper, green, red, and capers in brine are generally defined as condiment	</p>	
+							</div>
+							<p><strong>ESA Definition </strong> <br>
+								Culinary Herbs and Spices are edible parts of plants that are traditionally added to foodstuffs for either their natural flavouring, aromatic and/or visual properties.
+							</p>
+							<br>
+							<br>
+							<br>
+
+							<div class="table-responsive table-scrollable">
+								<table class="table table-striped table-bordered table-hover ">
+								<tr class="tableizer-firstrow"><th>HERBS AND SPICES</th><th>BOTANICAL NAME</th><th>PART OF PLANT</th><th>Part of plant</th><th>CLIMATE ZONE</th><th>HERB OR SPICE</th></tr>
+								 <tr><td>Common name</td><td>&nbsp;</td><td>Botanical definition</td><td>SPICED definition</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+								 <tr><td>Aniseed</td><td>Pimpinella anisum</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Asafoetida</td><td>Ferula asafoetida</td><td>Rhizome</td><td>Rhizome</td><td>TE, SU</td><td>Spice</td></tr>
+								 <tr><td>Basil</td><td>Ocimum basilicum</td><td>1b)</td><td>Fruit</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Borage leaf</td><td>Borago officinalis</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Caraway</td><td>Carum carvi</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Cardamom seeds</td><td>Elettaria cardamomum</td><td>Seed</td><td>Seed</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cardamom, whole pods</td><td>Elettaria cardamomum</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Celery leaves</td><td>Apium graveolens dulce</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Celery seed</td><td>Apium graveolens</td><td>Seed</td><td>Seed</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Chervil</td><td>Anthriscus cerefolium</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Chillies</td><td>Capsicum frutescens or annuum</td><td>Fruit</td><td>Fruit</td><td>TR, TE</td><td>Spice</td></tr>
+								 <tr><td>Chives</td><td>Allium schoenoprasum</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Cinnamon</td><td>Cinnamomum zeylanicum</td><td>Inner bark</td><td>Inner bark</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cinnamon (Cassia) 1</td><td>Cinnamomum burmanii*</td><td>Inner bark</td><td>Inner bark</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cinnamon (Cassia) 2</td><td>Cinnamomum loureirii *</td><td>Inner bark</td><td>Inner bark</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cinnamon (Cassia) 3</td><td>Cinnamomum aromaticum*</td><td>Inner bark</td><td>Inner bark</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cloves</td><td>Syzygium aromaticum</td><td>Flower bud</td><td>Flower bud</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Coriander leaves</td><td>Coriandrum sativum</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Coriander seed</td><td>Coriandrum sativum</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Cumin seed</td><td>Cuminum cyminum</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Curry leaf</td><td>Murraya koenigii</td><td>Leaf</td><td>Leaf</td><td>TR, SU</td><td>Herb</td></tr>
+								 <tr><td>Dill seed</td><td>Anethum graveolens, Anethum sowa</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE, SU</td><td>Spice</td></tr>
+								 <tr><td>Dill tops</td><td>Anethum graveolens</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Fennel seed</td><td>Foeniculum vulgare</td><td>Fruit, 1a)</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Fenugreek</td><td>Trigonella foenum-graecum</td><td>Seed</td><td>Seed</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Galangal</td><td>Alpinia officinalis, Alpinia officinarum, Kaempferia galangal</td><td>Rhizome</td><td>Rhizome</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Garlic</td><td>Allium sativum</td><td>Bulb</td><td>Bulb</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Ginger</td><td>Zingiber officinale</td><td>Rhizome</td><td>Rhizome</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Grains of paradise</td><td>Aframomum melegueta</td><td>Seed</td><td>Seed</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Juniper berries</td><td>Juniperus communis</td><td>Fruit</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Kaffir Lime Leaves</td><td>Citrus hystrix</td><td>Leaf</td><td>Leaf</td><td>TR</td><td>Herb</td></tr>
+								 <tr><td>Laurel (Bay) leaves</td><td>Laurus nobilis</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Lavender flower</td><td>Lavandula officinalis</td><td>Flower</td><td>Flower</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Lavender leaf</td><td>Lavandula officinalis</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Lemon Grass</td><td>Cymbopogon citratus</td><td>Leaf</td><td>Leaf</td><td>TR</td><td>Herb</td></tr>
+								 <tr><td>Lovage</td><td>Levisticum officinalis</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Lovage</td><td>Levisticum officinalis</td><td>Rhizome</td><td>Rhizome</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Mace</td><td>Myristica fragrans, Myristica argentea</td><td>Aril</td><td>Aril</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Marjoram</td><td>Majorana hortensis, Syn. Origanum majorana</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Mexican oregano</td><td>Lippia graveolens</td><td>Leaf</td><td>Leaf</td><td>TE, SU</td><td>Herb</td></tr>
+								 <tr><td>Mustard seed 1</td><td>Sinapis alba, Sinapis nigra</td><td>Seed</td><td>Seed</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Mustard seed 2</td><td>Brassica nigra, Brassica juncea</td><td>Seed</td><td>Seed</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Nigella seeds (kaljoni seed, or improperly "onion seeds", or "black cumin seeds", or"black caraway seeds")</td><td>Nigella sativa</td><td>Seed</td><td>Seed</td><td>TR, SU</td><td>Spice</td></tr>
+								 <tr><td>Nutmeg</td><td>Myristica fragrans</td><td>Seed</td><td>Seed</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Onion and shallot, dried</td><td>Allium cepa & allium cepavar. aggregatum</td><td>Bulb</td><td>Bulb</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Oregano 1</td><td>Origanum vulgare</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Oregano 2</td><td>Origanum onites</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Paprika</td><td>Capsicum annuum or frutescens</td><td>Fruit</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Parsley</td><td>Petroselinum crispum, Petroselinum sativum</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Pepper, green3)</td><td>Piper nigrum</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Pepper, black</td><td>Piper nigrum</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Pepper, white</td><td>Piper nigrum</td><td>Seed, 1a)</td><td>Seed</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Red pepper</td><td>Capsicum frutescens or annuum</td><td>Fruit</td><td>Fruit</td><td>TR, TE</td><td>Spice</td></tr>
+								 <tr><td>Pink pepper 1</td><td>Schinus terebinthifolius</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Pink pepper 2</td><td>Schinus molle</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Cubeb pepper, Cubebs, Java pepper</td><td>Piper cubeba L.</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Peppermint</td><td>Mentha piperita</td><td>Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Pimento (Allspice)</td><td>Pimenta dioica</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Rosemary</td><td>Rosmarinus officinalis</td><td>1b) Leaf</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Saffron</td><td>Crocus sativus</td><td>Parts of pistil</td><td>Parts of pistil</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Sage</td><td>Salvia officinalis, Salvia triloba</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Savory</td><td>Satureja hortensis</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Summer savory, winter savory</td><td>Satureja montana</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Sichuan pepper</td><td>Zanthoxylum piperitum</td><td>Fruit</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Spearmint</td><td>Mentha spicata</td><td>1b)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Star anise</td><td>Illicium verum</td><td>Fruit</td><td>Fruit</td><td>TE</td><td>Spice</td></tr>
+								 <tr><td>Tarragon</td><td>Artemisia dranunculus</td><td>2)</td><td>Leaf</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Thyme</td><td>Thymus vulgaris ,Thymus zygis, Thymus serpyllum</td><td>1b)</td><td>Fruit</td><td>TE</td><td>Herb</td></tr>
+								 <tr><td>Turmeric</td><td>Curcuma longa</td><td>Rhizome</td><td>Rhizome</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Vanilla 1</td><td>Vanilla planifolia</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								 <tr><td>Vanilla 2</td><td>Vanilla tahitensis</td><td>Fruit</td><td>Fruit</td><td>TR</td><td>Spice</td></tr>
+								</table>
+							</div>
+
 				    </div>
 				  </div>
 				</div>		
