--- a/app/views/home/treatinfo.html.erb
+++ b/app/views/home/treatinfo.html.erb
@@ -17,7 +17,59 @@
 				<div class="well">          
 				  <div class="panel panel-info">
 				    <div class="panel-body">	
-				    	<p>Info here</p>
+				    	<p>
+									<div class="table-responsive table-scrollable">
+									 <table class="table table-striped table-bordered table-hover ">
+									<tr class="tableizer-firstrow"><th>Description</th><th>Parameter</th><th>Description</th></tr>
+									 <tr><td>alta fermentation product in the environment</td><td>ALTA</td><td>alta fermentation product in the environment</td></tr>
+									 <tr><td>acetic acid (possibly as salt) in the environment</td><td>acetic_acid</td><td>acetic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>anaerobic environment</td><td>anaerobic</td><td>anaerobic environment</td></tr>
+									 <tr><td>ascorbic acid (possibly as salt) in the environment</td><td>ascorbic_acid</td><td>ascorbic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>benzoic acid (possibly as salt) in the environment</td><td>benzoic_acid</td><td>benzoic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>citric acid (possibly as salt) in the environment</td><td>citric_acid</td><td>citric acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>carbon-dioxide in the environment</td><td>CO_2</td><td>carbon-dioxide in the environment</td></tr>
+									 <tr><td>other species in the environment</td><td>competition</td><td>other species in the environment</td></tr>
+									 <tr><td>cut (minced, chopped, ground, etc)</td><td>cut</td><td>cut (minced, chopped, ground, etc)</td></tr>
+									 <tr><td>dried food</td><td>dried</td><td>dried food</td></tr>
+									 <tr><td>ethylenenediaminetetraacetic acid in the environment</td><td>EDTA</td><td>ethylenenediaminetetraacetic acid in the environment</td></tr>
+									 <tr><td>ethanol in the environment</td><td>ethanol</td><td>ethanol in the environment</td></tr>
+									 <tr><td>fat in the environment</td><td>fat</td><td>fat in the environment</td></tr>
+									 <tr><td>frozen food</td><td>frozen</td><td>frozen food</td></tr>
+									 <tr><td>fructose in the environment</td><td>fructose</td><td>fructose in the environment</td></tr>
+									 <tr><td>glucose in the environment</td><td>glucose</td><td>glucose in the environment</td></tr>
+									 <tr><td>glycerol in the environment</td><td>glycerol</td><td>glycerol in the environment</td></tr>
+									 <tr><td>hydrochloric acid in the environment</td><td>HCl</td><td>hydrochloric acid in the environment</td></tr>
+									 <tr><td>inoculation in/on previously heated (cooked, baked, pasteurized, etc) but not sterilised food/medium</td><td>heated</td><td>inoculation in/on previously heated (cooked, baked, pasteurized, etc) but not sterilised food/medium</td></tr>
+									 <tr><td>in an environment that has been irradiated</td><td>irradiated</td><td>in an environment that has been irradiated</td></tr>
+									 <tr><td>irradiation at constant rate during the observation time</td><td>irradiation</td><td>irradiation at constant rate during the observation time</td></tr>
+									 <tr><td>lactic acid (possibly as salt) in the environment</td><td>lactic_acid</td><td>lactic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>food fermented by lactic acid bacteria</td><td>lactic_bacteria_fermented</td><td>food fermented by lactic acid bacteria</td></tr>
+									 <tr><td>modified atmosphere environment</td><td>Modified_Atmosphere</td><td>modified atmosphere environment</td></tr>
+									 <tr><td>malic acid in the environment</td><td>malic_acid</td><td>malic acid in the environment</td></tr>
+									 <tr><td>moisture in the environment</td><td>moisture</td><td>moisture in the environment</td></tr>
+									 <tr><td>glycerol monolaurate (emulsifier) in the environment</td><td>monolaurin</td><td>glycerol monolaurate (emulsifier) in the environment</td></tr>
+									 <tr><td>nitrogen in the environment</td><td>N_2</td><td>nitrogen in the environment</td></tr>
+									 <tr><td>sodium chloride in the environment</td><td>NaCl</td><td>sodium chloride in the environment</td></tr>
+									 <tr><td>nisin in the environment</td><td>nisin</td><td>nisin in the environment</td></tr>
+									 <tr><td>sodium or potassium nitrite in the environment</td><td>nitrite</td><td>sodium or potassium nitrite in the environment</td></tr>
+									 <tr><td>oxygen (aerobic conditions) in the environment</td><td>O_2</td><td>oxygen (aerobic conditions) in the environment</td></tr>
+									 <tr><td>propionic acid (possibly as salt) in the environment</td><td>propionic_acid</td><td>propionic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>raw</td><td>raw</td><td>raw</td></tr>
+									 <tr><td>shaken (agitated, stirred)</td><td>shaken</td><td>shaken (agitated, stirred)</td></tr>
+									 <tr><td>smoked food</td><td>smoked</td><td>smoked food</td></tr>
+									 <tr><td>sorbic acid (possibly as salt) in the environment</td><td>sorbic_acid</td><td>sorbic acid (possibly as salt) in the environment</td></tr>
+									 <tr><td>sterilised before inoculation</td><td>sterile</td><td>sterilised before inoculation</td></tr>
+									 <tr><td>sucrose in the environment</td><td>sucrose</td><td>sucrose in the environment</td></tr>
+									 <tr><td>sugar in the environment</td><td>sugar</td><td>sugar in the environment</td></tr>
+									 <tr><td>vacuum-packed</td><td>vacuum</td><td>vacuum-packed</td></tr>
+									 <tr><td>oregano essential oil in the environment</td><td>oregano</td><td>oregano essential oil in the environment</td></tr>
+									 <tr><td>with the indigenous flora in the environment (but not counted)</td><td>indigenous_flora</td><td>with the indigenous flora in the environment (but not counted)</td></tr>
+									 <tr><td>pressure controlled</td><td>pressure</td><td>pressure controlled</td></tr>
+									 <tr><td>in presence of diacetic acid (possibly as salt)</td><td>diacetic_acid</td><td>in presence of diacetic acid (possibly as salt)</td></tr>
+									 <tr><td>in presence of betaine</td><td>betaine</td><td>in presence of betaine</td></tr>
+									</table>
+									</div>
+				    	</p>
 				    </div>
 				  </div>
 				</div>		
